@@ -15,6 +15,7 @@ Version 1.3
  - Standardize some of the Logging Messages so its easier to parse (Justin)
  - Implemented Issue 325 - Add a GetChangeVerfied method to the Manager and Value classes to
    determine if a Value is checked upon refresh from a device (Justin)
+ - Fixed issue 350 - FreeBSD Makefile updates and a few patches (Justin)
 
 Version 1.2 
  - Released on 15/10/14
